first five page

--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -132,3 +132,24 @@
 .inline-element {
 	display: inline !important;
 }
+
+.blue-bg {
+background:	rgba(51, 153, 255, .6);
+	
+}
+
+.white-bg {
+	background: #fff;
+}
+.text-black {
+		color: #000;	
+	}
+
+.text-white {
+		color: #fff;	
+	}
+
+
+.bg-traparent {
+	background: transparent !important;
+}
