--- a/compass_temp_assets/style.css
+++ b/compass_temp_assets/style.css
@@ -266,6 +266,26 @@ a:focus {
   display: inline !important;
 }
 
+.blue-bg {
+  background: rgba(51, 153, 255, 0.6);
+}
+
+.white-bg {
+  background: #fff;
+}
+
+.text-black {
+  color: #000;
+}
+
+.text-white {
+  color: #fff;
+}
+
+.bg-traparent {
+  background: transparent !important;
+}
+
 /* ----------------------------------------------------------------------------------------
 * Global Style.
 * Header styles.
@@ -454,58 +474,6 @@ a:focus {
  * Main styles.
  * ----------------------------------------------------------------------------------------
  */
-.Register {
-  padding: 50px;
-}
-
-.top {
-  text-align: right;
-}
-
-.lead {
-  text-align: center;
-}
-
-.cta {
-  max-width: 850px;
-  padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.cta-left {
-  margin-top: 50px;
-  border: 1px solid #e5e5e5;
-  padding: 36px 50px;
-}
-.cta-left .btn {
-  margin-top: 10px;
-  margin-bottom: 18px;
-}
-
-.seprater-90 {
-  margin-top: 20px;
-}
-
-.cta-form {
-  color: #fff;
-  background: #00a1e0;
-  padding: 20px 42px;
-}
-.cta-form h2 {
-  margin-bottom: 38px;
-}
-.cta-form p {
-  margin-bottom: 20px;
-}
-.cta-form .btn-lg {
-  padding: 17px 16px;
-  margin-top: 24px;
-}
-.cta-form .text-center a {
-  color: #fff;
-}
-
 #preference header p {
   margin: 0 0 33px;
 }
@@ -556,38 +524,6 @@ a:focus {
   padding: 60px 80px;
 }
 
-#login {
-  max-width: 950px;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 30px 40px;
-  background: url("../images/login-bg2.jpg") no-repeat;
-  background-size: 100%;
-}
-#login .login form {
-  background: #fff;
-  padding: 12px 28px;
-  border: 1px solid #e5e5e5;
-}
-#login .login form p {
-  color: #00a1e0;
-  margin-top: 20px;
-}
-#login .login form label {
-  font-weight: normal;
-}
-#login .login form .btn {
-  font-size: 16px;
-  font-weight: normal;
-}
-#login .login p.footer {
-  text-align: center;
-  text-decoration: underline;
-  margin-top: 20px;
-  color: black;
-}
-
 .copy-right-text {
   text-align: center;
   margin-top: 20px;
@@ -596,82 +532,6 @@ a:focus {
 .login-bg {
   background: url("../images/login-bg-image.jpg") no-repeat;
   background-size: 100%;
-}
-
-#login-2 {
-  max-width: 950px;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 30px 40px;
-  background-size: 100%;
-  color: #fff;
-}
-
-.login-2 .col-sm-5 {
-  max-width: 38.666667%;
-}
-
-.left-block {
-  padding: 175px 0px;
-  text-align: left;
-  min-height: 500px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-.left-block p {
-  color: #fff;
-  font-size: 27px;
-  max-width: 200px;
-  line-height: 39px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.blue-bg {
-  background: rgba(51, 153, 255, 0.6);
-}
-
-.white-bg {
-  background: #fff;
-}
-
-.text-black {
-  color: #000;
-}
-
-.text-white {
-  color: #fff;
-}
-
-#form-id {
-  min-height: 500px;
-  max-height: 500px;
-  color: #000;
-  /* background: #fff; */
-  padding: 20px 42px;
-}
-#form-id h2 {
-  margin-bottom: 24px;
-}
-#form-id p {
-  margin-bottom: 20px;
-}
-#form-id label {
-  font-weight: normal;
-}
-#form-id .btn-lg {
-  padding: 17px 16px;
-  margin-top: 24px;
-}
-#form-id img {
-  display: block;
-  margin: 50px auto;
-}
-#form-id .success {
-  text-align: center;
-  font-size: 60px;
-  color: #3ec95a;
 }
 
 .container-fluid#dashboard {
@@ -2458,6 +2318,14 @@ a.back-to-service i {
 		    
 		}
  */
+}
+@media (min-width: 992px) {
+  #login-2 .col-md-6:first-child {
+    width: 46% !important;
+  }
+  #login-2 .col-md-6:last-child {
+    width: 54% !important;
+  }
 }
 /* -----------------------------
 -------- Buttons
