--- a/sass/style_ubold.scss
+++ b/sass/style_ubold.scss
@@ -1,3 +1,8 @@
+@import "mixins";
+@import "base";
+@import "layout";
+@import "components";
+
 body {
     background: #fff; 
 }
@@ -26,7 +31,7 @@ body {
 .cta-left {
 	margin-top: 50px;
 	border: 1px solid #ddd;
-	padding: 36px 50px;
+	padding: 36px 56px;
 	.btn {
 		margin-top: 10px;
 		margin-bottom: 18px;
@@ -76,3 +81,138 @@ body {
     background-color: #fff !important;
     border-color: #e4e4e4!important;
 }
+
+.login-container {
+	padding: 60px 80px;
+}
+
+#login {
+	max-width: 950px;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 30px 40px;
+	background: url('../images/login-bg2.jpg') no-repeat;
+	background-size: 100%;
+	.login {
+		
+		form {
+			background: #fff;
+			padding: 12px 28px;
+			border: 1px solid $border-bg;
+			p {
+				color: $blue;
+				margin-top: 20px;
+			}
+			label {
+    		font-weight: normal;
+			}
+			.btn {
+				font-size: 16px;
+				font-weight: normal;
+			}
+		}
+		p.footer {
+			text-align: center;
+			text-decoration: underline;
+			margin-top: 20px;
+			color: black;
+		}
+	}
+}
+
+.copy-right-text {
+	text-align: center;
+	margin-top: 20px;
+}
+
+.login-bg {
+	background: url('../images/login-bg-image.jpg') no-repeat;
+	background-size: 100%;
+}
+
+
+#login-2 {
+
+	
+    max-width: 950px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 40px;
+    background-size: 100%;
+    color: #fff;
+
+    
+}		
+
+.login-2 .col-sm-5 {
+	max-width: 38.666667%;
+}
+
+.left-block {
+	
+	padding: 175px 0px;
+	text-align: left;
+	//min-height: 500px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	p {
+		color: #fff;
+		font-size: 27px;
+		max-width: 200px;
+		line-height: 39px;
+		margin-right: auto;
+    	margin-left: auto;
+	}
+}	
+
+.blue-bg {
+background:	rgba(51, 153, 255, .6);
+	
+}
+
+
+#form-id .icon-success {
+		text-align: center;
+		font-size: 60px ;
+		color: #3ec95a;
+}
+
+#form-id {
+	min-height: 500px;
+	//max-height: 500px;
+	color: #000;
+	 background: #fff; 
+	padding: 20px 42px;
+	h2 {
+		margin-bottom: 24px;
+	}
+	p {
+		margin-bottom: 20px;	
+	}
+	label {
+    	font-weight: normal;
+	}
+	.btn-lg {
+    padding: 17px 16px;
+    margin-top: 24px;
+   
+   }
+   img {
+   	display: block;
+   	margin: 50px auto;
+   }
+   .success {
+		text-align: center;
+		font-size: 60px ;
+		color: #3ec95a;
+
+	}
+	.btn-lg.btn-auth {
+    	margin-top: 14px;
+	}
+	
+}//for form-id
+
+
