--- a/sass/style-new.scss
+++ b/sass/style-new.scss
@@ -21,7 +21,7 @@
 				background: #2a70e8;
 			}
 			.completed {
-				background: #0e642b;
+				background: #2a70e8;
 			}
 			&:last-child a{
 				border-right: none;
@@ -68,6 +68,7 @@
 	.row-nav { margin-left: -26px; margin-right: -26px;  }
 	.modal .modal-dialog .modal-content .modal-header { padding-bottom: 15px; }
 	.modal .modal-dialog .modal-content .modal-body { padding-top: 0px; }
+	.modal .modal-dialog .modal-content {  padding: 36px 25px; }
 	.top a {
 	    margin-top: 8px;
 	    display: block;
@@ -139,11 +140,24 @@ width: 30%;
 	}
 	input {
 			height: 38px !important;
-			padding: 0px 12px;
+			padding: 0px 4px;
 			background-image: url('../images/dropdown.png');
-	   		background-position: 60px 16px;	
+	   		background-position: 62px 16px;	
 	   		background-repeat: no-repeat;
 		}
+}
+
+.hours input {
+    height: 38px !important;
+    padding: 0px 12px;
+    background-image: url("../images/dropdown.png");
+    background-position: 72px 16px;
+    background-repeat: no-repeat;
+}
+
+.icons {
+    padding: 20px 82px;
+    text-align: center;
 }
 
 
