--- a/compass_temp_assets/style-new.css
+++ b/compass_temp_assets/style-new.css
@@ -39,8 +39,8 @@
   margin-left: 0;
   margin-right: 0;
 }
-.setup-panel form.hours {
-  padding: 0px 80px;
+.setup-panel form.page-3 label {
+  margin-top: 20px;
 }
 .setup-panel .modal-header {
   min-height: 16.43px;
@@ -66,7 +66,7 @@
   padding-top: 0px;
 }
 .setup-panel .modal .modal-dialog .modal-content {
-  padding: 36px 25px;
+  padding: 26px 25px 36px;
 }
 .setup-panel .top a {
   margin-top: 8px;
@@ -152,7 +152,7 @@ div#tbl {
   height: 38px !important;
   padding: 0px 4px;
   background-image: url("../images/dropdown.png");
-  background-position: 62px 16px;
+  background-position: 90% 16px;
   background-repeat: no-repeat;
 }
 
@@ -160,7 +160,7 @@ div#tbl {
   height: 38px !important;
   padding: 0px 12px;
   background-image: url("../images/dropdown.png");
-  background-position: 72px 16px;
+  background-position: 90% 16px;
   background-repeat: no-repeat;
 }
 
