--- a/exchange/sass/layout/_main.scss
+++ b/exchange/sass/layout/_main.scss
@@ -539,6 +539,7 @@ padding: 0 36px;
 	padding: 6px 20px;
 	background: #e4f8ff;
 	border: 1px solid #c2c2c2;
+	padding-bottom: 12px;
 	
 	p.heading { color: #21366e; font-size: 18px; font-weight: bold; margin: 0;}
 	.form-group {width: 100%; max-width: 150px;}
