--- a/exchange/sass/layout/_main.scss
+++ b/exchange/sass/layout/_main.scss
@@ -589,6 +589,37 @@ padding: 0 36px;
  display: block;
  }
 
+ //////////////////////////////2 
+ .loan-application-2 {
+ 	
+ 	padding:0 40px; 
+	color: #000;
+	position: absolute;
+    width: 750px;
+    max-height: 1250px;
+    height: 100%;
+   	right: -750px;
+    top: 0;
+    background: #fff;
+    z-index: 9;
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    transition: 1s;
+    padding: 0 40px; 
+    display: none;
+    .close {font-size: 12px; color: #000;     opacity: 1;     margin-top: 10px; }
+
+
+ }
+.loan-application-show-2 {
+  transition: 1s;
+ right: 0;
+ display: block;
+ }
+
+
+
+
 
 .loan-application {
 	padding:0 40px; 
