--- a/exchange/sass/layout/_main.scss
+++ b/exchange/sass/layout/_main.scss
@@ -608,6 +608,9 @@ padding: 0 36px;
     padding: 0 40px; 
     display: none;
     .close {font-size: 12px; color: #000;     opacity: 1;     margin-top: 10px; }
+    .heading { color: #000; border-bottom: 1px  solid #cccccc;}
+	.heading h4 { color: #000;  margin-top: 24px;
+    	margin-bottom: 20px; }
 
 
  }
