--- a/exchange/sass/layout/_main.scss
+++ b/exchange/sass/layout/_main.scss
@@ -806,3 +806,27 @@ padding: 0 36px;
 	.table a {     font-size: 18px; margin-right: 4px; }
 	
 }//credit-box-rules
+
+ .modal-credit-box {
+
+ 		.modal-content {
+	      border-radius: 0px;
+	      outline: 0;
+	      -webkit-box-shadow:none;
+	      box-shadow:none;
+    	}
+    	.notification {
+    		background: #428BCA; font-size: 13px; font-weight: bold; padding: 8px  10px; color: #fff;  
+    		margin-bottom:10px;
+    		margin-left: -15px;
+    		margin-right: -15px;
+    		margin-top: -15px;
+    		max-width: 80%;
+    		p { margin: 0; } 
+    	}
+    	p.asset {font-size: 14px; font-weight: bold; color: #000;  }
+    	.table {margin-bottom: 0; }
+    	.table-bottom-text { text-align: center;  }
+	
+ }
+ 
