--- a/gvg-langing-page/sass/style-landing-page.scss
+++ b/gvg-langing-page/sass/style-landing-page.scss
@@ -1,10 +1,21 @@
+
+#landing-page {
+	margin-top: -21px; 
+}
 .jumbotron  {
+	position: relative; 
 	padding-left: 100px; 
 	padding-right: 100px;
 	padding-top: 150px; 
-	background-image: url('../images/banner-bg.png');
-	background-repeat: repeat-x;
+	// background-image: url('../images/banner-bg.png');
+	// background-repeat: repeat-y;
 	height: 600px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f0d30b+0,f1d67f+51,f0d30b+100 */
+	background: #f0d30b; /* Old browsers */
+	background: -moz-linear-gradient(top, #f0d30b 0%, #FFEDB2  51%, #f0d30b 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #f0d30b 0%,#FFEDB2  51%,#f0d30b 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #f0d30b 0%,#FFEDB2  51%,#f0d30b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0d30b', endColorstr='#f0d30b',GradientType=0 ); /* IE6-9 */
 
 	h1 {font-size: 48px; font-weight: bold; text-transform: capitalize; }
 	ul li { font-size: 20px; }
@@ -15,7 +26,7 @@ section {
 	margin-bottom: 60px; 
 }
 .about-section {
-	
+	    margin-top: 70px;
 	padding: 0 200px;
 	h3 {text-align: center; }
 	text-align: left; 
@@ -53,7 +64,7 @@ section {
 	
 }//lp__lear-more
 .lp__lear-more_anchor {
-	max-width: 166px;
+	max-width: 176px;
 	display: block;
 	position: relative; 
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fcfeff+0,eeeeee+46 */
@@ -86,15 +97,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 
 
 .lp__testimonial {
-	max-width: 1100px;
+	//max-width: 1100px;
 	margin: 0 auto;
-	padding: 20px;
+	padding: 20px 200px;
 	margin-bottom: 80px; 
 
 	.lp__testimonial__block {
 		p {color: #979191; }
 		img {display: inline-block;  margin-right: 10px; position: relative; width: 100px; height: auto; }
-		.msg { font-style: italic; line-height: 1; font-size: 14px;  margin-top: 24px; }
+		.msg { font-style: italic; line-height: 1; font-size: 16px;  margin-top: 24px; }
 		p.customer {font-size: 14px; }
 		span.black {color: #000; }
 	 	padding: 24px 0;
@@ -113,7 +124,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 	 text-align: center; 
 	 h3 {margin-bottom: 30px; }
 	.inner	{padding: 40px 200px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin-right: -15px; margin-left: -15px;   }
-	.btn-top { position: absolute; right: 50%; top: -20px; left: 39%; min-width: 200px; border-radius: 0;  }
+	.btn-top { position: absolute; right: 50%; top: -20px; left: 42%; min-width: 200px; border-radius: 0;  }
 	.btn-div .btn { margin-bottom: -100px; border: 6px solid #ededed; border-radius: 4px; }
 	 ul li img {width: 140px; height: auto; }
 	 //.btn-border {  }
@@ -130,7 +141,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 	.dr-msg {background: #eef7ff; border: 1px solid #0163be; padding: 20px; position: relative; height: 400px;
 		p { margin: 0px;  /* max-width: 300px; */  }
 		p.msg-small-text {   max-width: 280px;   }
-		img {position: absolute; right: 0; bottom: 0; width: 220px; height: auto; }
+		img {position: absolute; right: 0; bottom: 0; width: 200px; height: auto; }
 	  }
 	 .m-b-30 {margin-bottom: 20px; }
 }
@@ -158,13 +169,205 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 	.panel-group .panel {
 	    margin-bottom: 14px; 
 	}
+	.panel-heading a { 
+		position: relative;
+		display: inline-block;
+    	width: 100%;
+	
+	}
+	.panel-heading a:after {
+	font-family: "FontAwesome";
+	content: "\f147";
+	position: absolute;
+	right: 15px;
+	font-size: 14px;
+	font-weight: 300;
+	top: 50%;
+	line-height: 1;
+	margin-top: -7px;
+	}
+	.panel-heading a.collapsed:after {
+		content: "\f196";
+	}
 }// 
 
-.lp__appointmetn-bottom {
+/* .lp__appointmetn-bottom {
 	padding: 10px 200px; 
 	.innner {border: 2px solid #ffbf87; border-radius: 4px; width: 500px; height: 400px; margin: 0 auto;  }
-}//
+}// */
 .bold {font-weight: bold; }
+
+// ================================== Form  ==================================
+.lp__appointmetn-bottom {
+	
+	.innner	{
+			padding: 20px 40px; 
+		border: 6px solid #ffbf87;
+		border-radius: 6px;
+		.col-md-5, .col-md-7 {padding-left: 30px; padding-right: 30px; }
+		.col-md-5 {border-right: 2px solid #ddd; }
+	}
+	.treatment-block {
+		border: 1px solid #ffbf87; 
+		border-radius: 4px;
+		padding: 10px 20px;
+		margin-bottom: 10px; 
+		h4 {font-weight: bold; margin-bottom: 4px;} 
+
+		i {display: inline-block; font-size: 36px; color: #ffbf87; margin-top: 12px;
+   			float: right; }
+
+	}
+	p.footer-text {
+		 	margin-top: 20px; color: #ff7700;  padding: 10px 15px;
+		i {margin-right: 10px; }
+	} 
+	.orange{ color: #ffbf87; }
+}
+#landing-form {
+		position: absolute;
+		top: -100px; 
+		left: 25%; 
+		z-index: 9999; 
+		max-width: 500px;
+		background: #fff;  
+		padding: 0px 15px; 
+		padding: 20px 40px; 
+		border: 6px solid rgba(173, 90, 10, 0.8);
+		border-radius: 6px;
+		margin-right: auto; 
+		margin-left: auto;
+		h2 {text-align: center; margin-bottom: 20px; }
+		.form-control {border-radius: 0; margin-bottom: 20px;  height: 40px; }
+		.btn {margin-bottom: 10px; text-transform: uppercase; padding: 8px 12px; font-size: 22px;  }
+		input {    width: auto; }
+		.form-group { input {    width: 100%; } }
+
+	::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+	    color:    #000;
+	}
+	:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	   color:    #000;
+	   opacity:  1;
+	}
+	::-moz-placeholder { /* Mozilla Firefox 19+ */
+	   color:    #000;
+	   opacity:  1;
+	}
+	:-ms-input-placeholder { /* Internet Explorer 10-11 */
+	   color:    #000;
+	}
+	:placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
+	  color:    #000;
+	}
+
+	.btn-sample {
+	  color: #ffffff;
+	  background-color: #fa8f3e;
+	  border-color: #793c1a;
+	  &:hover, &:focus, &:active, &.active {
+	    color: #ffffff;
+	    background-color: #fa8f3e;
+	    border-color: #793c1a;
+	  }
+	}
+
+}// form 
+
+#landing-form-2 {
+		
+		
+		max-width: 500px;
+		background: #fff;  
+		padding: 0px 15px; 
+		
+		margin-right: auto; 
+		margin-left: auto;
+		h2 {text-align: center; margin-bottom: 20px; }
+		.form-control {border-radius: 0; margin-bottom: 20px;  height: 40px; }
+		.btn {margin-bottom: 10px; text-transform: uppercase; padding: 8px 12px; font-size: 22px;  }
+
+		input {    width: auto; }
+		.form-group { input {    width: 100%; } }
+	
+
+	::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+	    color:    #000;
+	}
+	:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	   color:    #000;
+	   opacity:  1;
+	}
+	::-moz-placeholder { /* Mozilla Firefox 19+ */
+	   color:    #000;
+	   opacity:  1;
+	}
+	:-ms-input-placeholder { /* Internet Explorer 10-11 */
+	   color:    #000;
+	}
+	:placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
+	  color:    #000;
+	}
+
+	.btn-sample {
+	  color: #ffffff;
+	  background-color: #fa8f3e;
+	  border-color: #793c1a;
+	  &:hover, &:focus, &:active, &.active {
+	    color: #ffffff;
+	    background-color: #fa8f3e;
+	    border-color: #793c1a;
+	  }
+	}
+
+}// form 
+
+
+//  ====================================Carouse Setting ==========================
+
+//  ==============================================================================
+
+
+  #carousel-1 {
+        position: relative;
+    }
+    #demo .item{
+      margin: 3px;
+    }
+    #demo .item img{
+      display: block;
+     width: 100px;
+        height: 129px;
+    }
+
+    .owl-carousel .owl-wrapper-outer {
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        border: 2px solid #FFB200;
+        padding: 12px;
+        background: #fff; 
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+    .carousel-1 .indicator-next,.carousel-1 .indicator-pre  {
+        display: block; 
+        cursor: pointer;
+        width: 45px; 
+        height: 45px; 
+        position: absolute;
+    }
+     .indicator-next {
+        right: -11px; 
+        top: 41%;   
+     }
+     .indicator-pre  { 
+           left: -11px; 
+        top: 41%;   
+     }
+
+
+
 //===================================buttons ==========================
 
  .btn-orange-top { 
@@ -234,6 +437,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
   	.lp__lear-more .tab-content {
 	    padding: 0 100px; 
 	}
+
+	.lp__appointmetn-bottom {
+		padding: 10px 100px;  
+	}
 	.lp__lear-more .tab-content ul {
      
      float: none; 
@@ -278,6 +485,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 	.lp__testimonial {
     	padding: 20px 100px; 
     }
+    .lp__appointmetn-bottom {
+		padding: 10px 100px;  
+	}
 
      .about-section {
     	    padding: 0 100px;
@@ -290,12 +500,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfeff', end
 	.lp__testimonial {
     	padding: 20px 100px; 
     }
+     .lp__appointmetn-bottom {
+		padding: 10px 100px;  
+	}
 
 }
 @media (min-width: 1200px) {
-  .hidden-lg {
-    display: none !important;
-  }
+   .lp__appointmetn-bottom {
+		padding: 10px 200px;  
+	}
 }
 .visible-print {
   display: none !important;
